fix overflow 2

--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -7,5 +7,4 @@
     flex-direction: column;
     width: 100%;
     padding: 0 15px;
-    overflow: auto;
 }
